[gd_scene format=3]

[ext_resource path="res://Scripts/TournamentScreen.gd" type="Script" id=1]

[node name="TournamentScreen" type="Control"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBoxContainer"]
text = "üèÜ –¢—É—Ä–Ω–∏—Ä: –≠—Ç–∞–ø 1"

[node name="MatchList" type="VBoxContainer" parent="VBoxContainer"]

[node name="ButtonSimulate" type="Button" parent="VBoxContainer"]
text = "–°–∏–º—É–ª–∏—Ä–æ–≤–∞—Ç—å —ç—Ç–∞–ø"

[node name="HistoryLabel" type="Label" parent="VBoxContainer"]
text = "–ò—Å—Ç–æ—Ä–∏—è —Ç—É—Ä–Ω–∏—Ä–æ–≤:"

[node name="HistoryList" type="VBoxContainer" parent="VBoxContainer"]
